edit dendro ticks

--- a/_posts/python/dendrogram/2015-06-30-dendrograms.html
+++ b/_posts/python/dendrogram/2015-06-30-dendrograms.html
@@ -10,7 +10,7 @@ language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 33
+order: 31
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -154,7 +154,7 @@ order: 33
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[31]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -197,9 +197,7 @@ order: 33
     <span class="n">Heatmap</span><span class="p">(</span>
         <span class="n">x</span> <span class="o">=</span> <span class="n">dendro_leaves</span><span class="p">,</span> 
         <span class="n">y</span> <span class="o">=</span> <span class="n">dendro_leaves</span><span class="p">,</span>
-        <span class="n">z</span> <span class="o">=</span> <span class="n">heat_data</span><span class="p">,</span>
-        <span class="n">xaxis</span> <span class="o">=</span> <span class="s">&#39;x&#39;</span><span class="p">,</span>
-        <span class="n">yaxis</span> <span class="o">=</span> <span class="s">&#39;y&#39;</span><span class="p">,</span>    
+        <span class="n">z</span> <span class="o">=</span> <span class="n">heat_data</span><span class="p">,</span>    
         <span class="n">colorscale</span> <span class="o">=</span> <span class="s">&#39;YIGnBu&#39;</span>
     <span class="p">)</span>
 <span class="p">])</span>
@@ -216,21 +214,36 @@ order: 33
                          <span class="p">})</span>
 <span class="c"># Edit xaxis</span>
 <span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;xaxis&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="o">.</span><span class="mi">15</span><span class="p">,</span> <span class="mi">1</span><span class="p">],</span>
-                                  <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">})</span>
+                                  <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;showgrid&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;showline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;zeroline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&quot;&quot;</span><span class="p">})</span>
 <span class="c"># Edit xaxis2</span>
-<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;xaxis2&#39;</span><span class="p">:</span> <span class="n">dendro_side</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;xaxis&#39;</span><span class="p">]})</span>
-<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;xaxis2&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="o">.</span><span class="mi">15</span><span class="p">],</span>
-                                   <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">})</span>
+<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;xaxis2&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="o">.</span><span class="mi">15</span><span class="p">],</span>
+                                   <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;showgrid&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;showline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;zeroline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;showticklabels&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&quot;&quot;</span><span class="p">}})</span>
+
 <span class="c"># Edit yaxis</span>
 <span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;yaxis&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="o">.</span><span class="mi">85</span><span class="p">],</span>
+                                  <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;showgrid&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
                                   <span class="s">&#39;showline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
-                                  <span class="s">&#39;ticks&#39;</span><span class="p">:</span> <span class="s">&quot;&quot;</span><span class="p">,</span>
-                                  <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">})</span>
+                                  <span class="s">&#39;zeroline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;showticklabels&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                  <span class="s">&#39;ticks&#39;</span><span class="p">:</span> <span class="s">&quot;&quot;</span><span class="p">})</span>
 <span class="c"># Edit yaxis2</span>
-<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;yaxis2&#39;</span><span class="p">:</span> <span class="n">dendro_side</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;yaxis&#39;</span><span class="p">]})</span>
-<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;yaxis2&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:[</span><span class="o">.</span><span class="mi">825</span><span class="p">,</span> <span class="o">.</span><span class="mi">975</span><span class="p">],</span>
+<span class="n">figure</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;yaxis2&#39;</span><span class="p">:{</span><span class="s">&#39;domain&#39;</span><span class="p">:[</span><span class="o">.</span><span class="mi">825</span><span class="p">,</span> <span class="o">.</span><span class="mi">975</span><span class="p">],</span>
                                    <span class="s">&#39;mirror&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
-                                   <span class="s">&#39;tickvals&#39;</span><span class="p">:</span> <span class="s">&quot;&quot;</span><span class="p">})</span>
+                                   <span class="s">&#39;showgrid&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;showline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;zeroline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;showticklabels&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+                                   <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&quot;&quot;</span><span class="p">}})</span>
 
 <span class="c"># Plot!</span>
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">figure</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;dendrogram_with_heatmap&#39;</span><span class="p">)</span>
@@ -244,10 +257,47 @@ order: 33
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[31]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8754.embed" height="800px" width="800px"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">dendro_side</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;xaxis&#39;</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>{&apos;domain&apos;: [0, 0.15],
+ &apos;mirror&apos;: False,
+ &apos;rangemode&apos;: &apos;tozero&apos;,
+ &apos;showgrid&apos;: False,
+ &apos;showline&apos;: True,
+ &apos;showticklabels&apos;: True,
+ &apos;ticks&apos;: &apos;outside&apos;,
+ &apos;type&apos;: &apos;linear&apos;,
+ &apos;zeroline&apos;: False}</pre>
 </div>
 
 </div>
