--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -49,7 +49,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">WebGL vs SVG Scatter Plots with 100,000 Random Points<a class="anchor-link" href="#WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">&#182;</a></h3>
+<h4 id="WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">WebGL vs SVG Scatter Plots with 100,000 Random Points<a class="anchor-link" href="#WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -243,7 +243,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -273,7 +273,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8850.embed" height="525px" width="100%"></iframe>
@@ -296,7 +296,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -333,7 +333,17 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1411: UserWarning:
+
+Estimated Draw Time Too Long
+
+</pre>
+</div>
+</div>
+
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8852.embed" height="525px" width="100%"></iframe>
@@ -344,4 +354,23 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>See <a href="https://plot.ly/python/reference/#scattergl">https://plot.ly/python/reference/#scattergl</a> for more information</p>
+
+</div>
+</div>
 </div>{% endraw %}
