edit treemap order number

--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -1,15 +1,16 @@
 ---
 permalink: python/treemaps
 description: How to make interactive treemap in Python with Plotly and Squarify. An examples of a treemap in Plotly using Squarify.
-name: Treemaps
+title: Treemaps
 has_thumbnail: true
 thumbnail: /images/treemap.png
 layout: user-guide
 language: python
 title: Python Treemaps | plotly
 display_as: chart_type
+has_thumbnail: true
 page_type: example_index
-order: 33
+order: 30
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
