--- a/_posts/python/distplot/2015-06-30-distplots.html
+++ b/_posts/python/distplot/2015-06-30-distplots.html
@@ -1,16 +1,16 @@
 ---
 permalink: python/distplot
 description: How to make interactive Distplots in Python with Plotly. Eight examples of Distplots with Python and Plotly.
-name: Distplots
+title: Distplots
 has_thumbnail: true
 thumbnail: /images/distplot.png
 layout: user-guide
+name: Python Distplots | plotly
 language: python
-title: Python Distplots | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 28
+order: 24
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
