--- a/_posts/python/finance/2015-06-30-ohlc-charts.html
+++ b/_posts/python/finance/2015-06-30-ohlc-charts.html
@@ -1,15 +1,16 @@
 ---
 permalink: python/ohlc-charts
 description: How to make interactive OHLC charts in Python with Plotly. Six examples of OHLC charts with Pandas, time series, and yahoo finance data.
-name: OHLC Charts
+title: OHLC Charts
 has_thumbnail: true
 thumbnail: /images/ohlc.png
 layout: user-guide
+name: Python OHLC Charts | plotly
 language: python
-title: Python OHLC Charts | plotly
 display_as: chart_type
+has_thumbnail: true
 page_type: example_index
-order: 27
+order: 25
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
