--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -1,16 +1,16 @@
 ---
 permalink: python/network-graphs
 description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
-name: Network Graphs
+title: Network Graphs
 has_thumbnail: true
 thumbnail: /images/net.png
 layout: user-guide
+name: Python Network Graphs | plotly
 language: python
-title: Python Network Graphs | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 32
+order: 30
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
