--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -5,12 +5,12 @@ title: Treemaps
 has_thumbnail: true
 thumbnail: /images/treemap.png
 layout: user-guide
+name: Python Treemaps | plotly
 language: python
-title: Python Treemaps | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 30
+order: 28
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
