edit name in notebooks

--- a/_posts/python/distplot/2015-06-30-distplots.html
+++ b/_posts/python/distplot/2015-06-30-distplots.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/distplot
 description: How to make interactive Distplots in Python with Plotly. Eight examples of Distplots with Python and Plotly.
-title: Distplots
+title: Python Distplots | plotly
 has_thumbnail: true
 thumbnail: /images/distplot.png
 layout: user-guide
-name: Python Distplots | plotly
+name: Distplots
 language: python
 display_as: chart_type
 has_thumbnail: true
