--- a/_posts/python/finance/2015-06-30-ohlc-charts.html
+++ b/_posts/python/finance/2015-06-30-ohlc-charts.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/ohlc-charts
 description: How to make interactive OHLC charts in Python with Plotly. Six examples of OHLC charts with Pandas, time series, and yahoo finance data.
-title: OHLC Charts
+title: Python OHLC Charts | plotly
 has_thumbnail: true
 thumbnail: /images/ohlc.png
 layout: user-guide
-name: Python OHLC Charts | plotly
+name: OHLC Charts
 language: python
 display_as: chart_type
 has_thumbnail: true
