--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/network-graphs
 description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
-title: Network Graphs
+title: Python Network Graphs | plotly
 has_thumbnail: true
 thumbnail: /images/net.png
 layout: user-guide
-name: Python Network Graphs | plotly
+name: Network Graphs
 language: python
 display_as: chart_type
 has_thumbnail: true
