--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/treemaps
 description: How to make interactive treemap in Python with Plotly and Squarify. An examples of a treemap in Plotly using Squarify.
-title: Treemaps
+title: Python Treemaps | plotly
 has_thumbnail: true
 thumbnail: /images/treemap.png
 layout: user-guide
-name: Python Treemaps | plotly
+name: Treemaps
 language: python
 display_as: chart_type
 has_thumbnail: true
