rm webgl compare

--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -33,13 +33,43 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
+<span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>&apos;1.8.12&apos;</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a>
-<br> Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
+<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
+Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
 
 </div>
 </div>
@@ -49,7 +79,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">WebGL vs SVG Scatter Plots with 100,000 Random Points<a class="anchor-link" href="#WebGL-vs-SVG-Scatter-Plots-with-100,000-Random-Points">&#182;</a></h4>
+<h4 id="Compare-WebGL-and-SVG">Compare WebGL and SVG<a class="anchor-link" href="#Compare-WebGL-and-SVG">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -58,13 +88,23 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="WebGL">WebGL<a class="anchor-link" href="#WebGL">&#182;</a></h5>
+<p>Checkout <a href="https://plot.ly/python/compare-webgl-svg">this notebook</a> to compare WebGL and SVG scatter plots with 75,000 random data points</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h5 id="WebGL-with-100,000--points">WebGL with 100,000  points<a class="anchor-link" href="#WebGL-with-100,000--points">&#182;</a></h5>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -95,7 +135,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8823.embed" height="525px" width="100%"></iframe>
@@ -112,13 +152,13 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="WebGL-with-1-Million-Points">WebGL with 1 Million Points<a class="anchor-link" href="#WebGL-with-1-Million-Points">&#182;</a></h3>
+<h4 id="WebGL-with-1-Million-Points">WebGL with 1 Million Points<a class="anchor-link" href="#WebGL-with-1-Million-Points">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -150,7 +190,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8817.embed" height="525px" width="100%"></iframe>
@@ -167,22 +207,13 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="WebGL-vs-SVG-with-many-traces">WebGL vs SVG with many traces<a class="anchor-link" href="#WebGL-vs-SVG-with-many-traces">&#182;</a></h3>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="WebGL">WebGL<a class="anchor-link" href="#WebGL">&#182;</a></h5>
+<h4 id="WebGL-with-many-traces">WebGL with many traces<a class="anchor-link" href="#WebGL-with-many-traces">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -191,8 +222,8 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>
 
 <span class="n">data</span> <span class="o">=</span> <span class="p">[]</span>
-<span class="n">trace_num</span> <span class="o">=</span> <span class="mi">30</span>
-<span class="n">point_num</span> <span class="o">=</span> <span class="n">trace_num</span><span class="o">*</span><span class="mi">100</span>
+<span class="n">trace_num</span> <span class="o">=</span> <span class="mi">20</span>
+<span class="n">point_num</span> <span class="o">=</span> <span class="mi">10000</span>
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">trace_num</span><span class="p">):</span>
     <span class="n">data</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">go</span><span class="o">.</span><span class="n">Scattergl</span><span class="p">(</span>
         <span class="n">x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">point_num</span><span class="p">),</span>
@@ -212,7 +243,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8850.embed" height="525px" width="100%"></iframe>
