Added codepens for 4 chart types: heat-map and countour colorscales, multiple chart types, Candlestick charts and ohlc charts

--- a/_posts/plotly_js/candlestick-charts/2015-08-15-simple-candlestick-example.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-simple-candlestick-example.html
@@ -1,10 +1,11 @@
 ---
 name: Simple Candlestick Chart Example
-plot_url: https://plot.ly/~chelsea_lyn/5642/
+plot_url: https://codepen.io/plotly/embed/zvmWYo/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: candlestick
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 var fig = PlotlyFinance.createCandlestick(
     {
