--- a/_posts/plotly_js/candlestick-charts/2015-08-15-basic-candlestick-chart.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-basic-candlestick-chart.html
@@ -1,10 +1,11 @@
 ---
 name: Basic Candlestick Chart Example
-plot_url: https://plot.ly/~chelsea_lyn/5576/
+plot_url: https://codepen.io/plotly/embed/YyJaKe/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: candlestick
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 
 var fig = PlotlyFinance.createCandlestick({
