--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick-styling.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick-styling.html
@@ -1,10 +1,11 @@
 ---
 name: Customizing the Candlestick Figure with Text and Annotations
-plot_url: https://plot.ly/~Nicole_G/3237/figure-title/
+plot_url: https://codepen.io/plotly/embed/mezxdj/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: candlestick
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 var fig = PlotlyFinance.createCandlestick(
     {
