--- a/_posts/plotly_js/colorscales/2015-08-10-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-colorscale-for-contour-plot.html
@@ -1,10 +1,11 @@
 ---
 name: Colorscale for Contour Plot
-plot_url: https://plot.ly/~Nicole_G/3017/
+plot_url: https://codepen.io/plotly/embed/OyBQao/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 20
 sitemap: false
+arrangement: horizontal
 ---
 
 var data = [ {
