--- a/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
@@ -1,10 +1,11 @@
 ---
 name: Custom Colorscale for Contour Plot
-plot_url: https://plot.ly/~Nicole_G/3021/
+plot_url: https://codepen.io/plotly/embed/xwyYBg/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 21
 sitemap: false
+arrangement: horizontal
 ---
 var data = [ {
   z: [[10, 10.625, 12.5, 15.625, 20],
