--- a/_posts/plotly_js/ohlc/2015-08-15-simple-example-with-datetime-object.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-simple-example-with-datetime-object.html
@@ -1,10 +1,11 @@
 ---
 name: Simple OHLC Example
-plot_url: https://plot.ly/~PlotBot/543/
+plot_url: https://codepen.io/plotly/embed/XmxEmN/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ohlc
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 var fig = PlotlyFinance.createOHLC(
     {
