--- a/_posts/plotly_js/ohlc/2015-08-15-styling-ohlc-chart.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-styling-ohlc-chart.html
@@ -1,10 +1,11 @@
 ---
 name: Customizing the OHLC Figure with Text and Annotations
-plot_url: https://plot.ly/~Nicole_G/3242/figure-title/
+plot_url: https://codepen.io/plotly/embed/OyBvMd/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ohlc
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 var fig = PlotlyFinance.createOHLC(
     {
