--- a/_posts/plotly_js/ohlc/2015-08-21-basic-ohlc-chart.html
+++ b/_posts/plotly_js/ohlc/2015-08-21-basic-ohlc-chart.html
@@ -1,10 +1,11 @@
 ---
 name: Basic OHCL Chart
-plot_url: https://plot.ly/~PlotBot/537/increasing-vs-decreasing/
+plot_url: https://codepen.io/plotly/embed/KdGoVw/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ohlc
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 
 var fig = PlotlyFinance.createOHLC({
