--- a/_posts/plotly_js/ohlc/2015-08-21-customizing-ohlc-figure-with-annotations.html
+++ b/_posts/plotly_js/ohlc/2015-08-21-customizing-ohlc-figure-with-annotations.html
@@ -1,10 +1,11 @@
 ---
 name: Customizing the Figure with Text and Annotations
-plot_url: https://plot.ly/~PlotBot/558/the-great-recession/
+plot_url: https://codepen.io/plotly/embed/dYgmYd/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ohlc
 order: 4
 sitemap: false
+arrangement: horizontal
 ---
 
 var fig = PlotlyFinance.createOHLC(
