Added Codepens for Error Bars

--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
@@ -1,10 +1,11 @@
 ---
 name: Bar Chart with Error Bars
-plot_url: https://plot.ly/~PlotBot/51
+plot_url: https://codepen.io/plotly/embed/VvEVgq/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   x: ['Trial 1', 'Trial 2', 'Trial 3'],
