--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
@@ -1,10 +1,11 @@
 ---
 name: Horizontal Error Bars
-plot_url: https://plot.ly/~PlotBot/48
+plot_url: https://codepen.io/plotly/embed/yYRQZg/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 var data = [
   {
