--- a/_posts/plotly_js/error-bar/2015-04-09-percent-error-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-percent-error-bar.html
@@ -1,11 +1,11 @@
 ---
 name: Error Bars as a Percentage of the y-Value
-plot_url: https://plot.ly/~PlotBot/47
+plot_url: https://codepen.io/plotly/embed/ZbqmqK#0/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 6
 sitemap: false
-
+arrangement: horizontal
 ---
 var data = [
   {
