--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
@@ -1,11 +1,11 @@
 ---
 name: Asymmetric Error Bars with a Constant Offset
-plot_url: https://plot.ly/~PlotBot/46
+plot_url: https://codepen.io/plotly/embed/MaPzxm/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 7
 sitemap: false
-
+arrangement: horizontal
 ---
 var data = [
   {
