Add redirect from

--- a/_posts/python/ipython-notebooks/2015-06-30-IPython_tutorial.html
+++ b/_posts/python/ipython-notebooks/2015-06-30-IPython_tutorial.html
@@ -11,6 +11,7 @@ display_as: chart_type
 has_thumbnail: true
 page_type: example_index
 order: 31
+redirect_from: ipython-notebooks/ipython-notebook-tutorial/
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
