order the pages

--- a/_posts/plotly_js/wind-rose/2015-04-09-wind-rose-chart.html
+++ b/_posts/plotly_js/wind-rose/2015-04-09-wind-rose-chart.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: wind-rose
 sitemap: false
 arrangement: horizontal
+order: 17
 ---
 var trace1 = {
   r: [77.5, 72.5, 70.0, 45.0, 22.5, 42.5, 40.0, 62.5],
