--- a/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
+++ b/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 redirect_from: javascript-graphing-library/box-plots/
+order: 9
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","box" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
