--- a/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 redirect_from: javascript-graphing-library/2d-density-plots/
+order: 12
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite", "2d-density-plot" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
