--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 redirect_from: javascript-graphing-library/error-bars/
+order: 8
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","error-bar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
