--- a/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 redirect_from: javascript-graphing-library/2D-Histogram/
+order: 16
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","histogram2d" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
