Updated Further examples

--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
@@ -1,10 +1,11 @@
 ---
 name: 3D Point Clustering
-plot_url: https://plot.ly/~jackp/9315/
+plot_url: https://codepen.io/plotly/embed/3f7fca10db1113fa68c5df70c4ba5ba2/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: 3d-cluster
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 
 function makePlotly(divId){
