--- a/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-options.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-options.html
@@ -1,10 +1,11 @@
 ---
 name: 2D Histogram Binning and Styling Options
-plot_url: https://plot.ly/~PlotBot/79
+plot_url: https://codepen.io/plotly/embed/4e6b80ed29252272dd834ba54a1c435c/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: histogram2d
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 var x = [];
 var y = [];
