--- a/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-scatter.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram-scatter.html
@@ -1,10 +1,11 @@
 ---
 name: 2D Histogram Overlaid with a Scatter Chart
-plot_url: https://plot.ly/~PlotBot/78
+plot_url: https://codepen.io/plotly/embed/fd0b78c728570844ffb99400f2e1f341/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: histogram2d
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 var x0 = [];
 var y0 = [];
