--- a/_posts/plotly_js/ohlc/2015-08-21-basic-ohlc-chart.html
+++ b/_posts/plotly_js/ohlc/2015-08-21-basic-ohlc-chart.html
@@ -1,5 +1,5 @@
 ---
-name: Basic OHCL Chart
+name: Basic OHLC Chart
 plot_url: https://codepen.io/plotly/embed/KdGoVw/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ohlc
