--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
@@ -1,6 +1,6 @@
 ---
 name: Responsive / Fluid Layout
-plot_url: https://codepen.io/plotly/embed/wKpPvj/?height=550&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/1b2c7b04118918ce776fc03e772ed01f/?height=550&theme-id=15263&default-tab=result
 language: plotly_js
 suite: responsive-fluid-layout
 order: 1
