--- a/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-example.html
+++ b/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-example.html
@@ -1,10 +1,11 @@
 ---
 name: Basic Ribbon Plot
-plot_url: https://plot.ly/~jackp/9269/
+plot_url: https://codepen.io/plotly/embed/af79d71b9249ba2777bc107b75b643af/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: ribbon-plot
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 
 var trace1 = {
