--- a/_posts/plotly_js/3d-surface/2015-04-09-elevations-3d-surface.html
+++ b/_posts/plotly_js/3d-surface/2015-04-09-elevations-3d-surface.html
@@ -1,10 +1,11 @@
 ---
 name: Topographical 3D Surface Plot
-plot_url: https://plot.ly/~PlotBot/193
+plot_url: https://codepen.io/plotly/embed/f5cba1937062541ae0ab3e9e389858c2/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: 3d-surface
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 var data = [
   {
