--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-array.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-array.html
@@ -1,6 +1,6 @@
 ---
 name: Asymmetric Error Bars
-plot_url: https://codepen.io/plotly/embed/JYmezZ/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/b054af06563413e4cec8721409fd5753/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 4
