--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
@@ -1,6 +1,6 @@
 ---
 name: Asymmetric Error Bars with a Constant Offset
-plot_url: https://codepen.io/plotly/embed/MaPzxm/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/f34503acc2bd0d7bbdf66b17e780042e/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 7
