--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Chart with Error Bars
-plot_url: https://codepen.io/plotly/embed/VvEVgq/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/f02d923cd5984039bd4f688703b9b9c6/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 2
