--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
@@ -1,6 +1,6 @@
 ---
 name: Horizontal Error Bars
-plot_url: https://codepen.io/plotly/embed/yYRQZg/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/8c80589e4f7ff07bb638bf9295f32523/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 3
