--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-style.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-style.html
@@ -1,6 +1,6 @@
 ---
 name: Colored and Styled Error Bars
-plot_url: https://codepen.io/plotly/embed/BoqGva/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/2aebe4cbf61a3696b64e0ac257068058/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: error-bar
 order: 5
