--- a/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-2d-histogram.html
@@ -1,10 +1,11 @@
 ---
 name: 2D Histogram of a Bivariate Normal Distribution
-plot_url: https://plot.ly/~PlotBot/77
+plot_url: https://codepen.io/plotly/embed/5be7ae3c609dc324cf7c6f82f8b1f06e/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: histogram2d
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 var x = [];
 var y = [];
