--- a/_posts/plotly_js/remove-trace/2015-08-15-remove-trace-example.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove-trace-example.html
@@ -1,6 +1,6 @@
 ---
 name: Remove Trace
-plot_url: https://codepen.io/plotly/embed/wabPJb/?height=500&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/963044d434248ee56d8236203c390017/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: remove-trace
 order: 8
