--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -1,7 +1,7 @@
 ---
-title: JavaScript Graphing Library | Plotly
+title: plotly.js | JavaScript Graphing Library
 permalink: /javascript/
-description: Plotly's scientific JavaScript graphing library for web-applications and dashboards. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
+description: A free interactive javascript graphing library. Plotly.js is built on d3.js and webgl and supports over 20 types of interactive charts.
 language: plotly_js
 redirect_from: /javascript-graphing-library/
 ---
@@ -24,7 +24,7 @@ redirect_from: /javascript-graphing-library/
 <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/plotly_icons.css"/>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="//cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
 
