break out plotly.js examples into a few sections

--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/zoom.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_events
+display_as: event
 order: 3
 redirect_from: javascript-graphing-library/zoom-events/
 ---
