--- a/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
@@ -8,7 +8,7 @@ thumbnail: /images/2d-density-plot.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: statistical
 redirect_from: javascript-graphing-library/2d-density-plots/
 order: 12
 ---
