--- a/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/heatmap.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: scientific
 order: 13
 redirect_from: javascript-graphing-library/heatmaps/
 ---
