--- a/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/remove-trace.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_events
+display_as: reference
 redirect_from: javascript-graphing-library/remove-trace/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","remove-trace" | sort: "order" %}
