--- a/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
+++ b/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/line-plots.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
-display_as: layout_opt
+display_as: tutorials
 redirect_from: javascript-graphing-library/ajax-call/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ajax" | sort: "order" %}
