--- a/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/bar.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 3
 redirect_from: javascript-graphing-library/bar-charts/
 ---
