--- a/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
+++ b/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/box.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: statistical
 redirect_from: javascript-graphing-library/box-plots/
 order: 9
 ---
