--- a/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
+++ b/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
@@ -4,12 +4,10 @@ name: Configuration Options
 permalink: javascript/configuration-options/
 description: How to configure your Plotly graph in javascript.
 layout: base
-thumbnail:
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
-display_as: layout_opt
-redirect_from:
+display_as: reference
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","configuration" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
