--- a/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
+++ b/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/contour.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: scientific
 redirect_from: javascript-graphing-library/contour-plots/
 order: 11
 ---
