--- a/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/horizontal-bar.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 4
 redirect_from: javascript-graphing-library/horizontal-bar-charts/
 ---
