--- a/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
+++ b/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
@@ -8,7 +8,7 @@ thumbnail: /images/line-plots.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 2
 redirect_from: javascript-graphing-library/line-charts/
 ---
