--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/line_and_scatter.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 1
 redirect_from: javascript-graphing-library/line-and-scatter/
 ---
