--- a/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
+++ b/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/multiple-axes.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 25
 redirect_from: javascript-graphing-library/multiple-axes/
 ---
