--- a/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/ohlc.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: finance
 order: 23
 ---
 <div class="tipbox row">
