--- a/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/pie-chart.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: basic
 order: 5
 redirect_from: javascript-graphing-library/pie-chart/
 ---
