--- a/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
+++ b/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/wind-rose.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: scientific
 order: 10
 redirect_from: javascript-graphing-library/wind-rose-charts/
 ---
