--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/fluid-layout.gif
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: tutorials
+display_as: basic
 order: 27
 redirect_from: javascript-graphing-library/responsive-fluid-layout/
 ---
