--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
@@ -8,7 +8,7 @@ thumbnail: /images/candlestick.png
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
-display_as: finance
+display_as: financial
 order: 22
 ---
 
