get media queries to work on phones

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -8,6 +8,9 @@ redirect_from: /javascript-graphing-library/
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Media query magic: http://stackoverflow.com/questions/19945658/my-iphone-thinks-its-980px-wide -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- Icon -->
 <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
 
