get header to work on js splash

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -21,8 +21,9 @@ redirect_from: /javascript-graphing-library/
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-<link rel="stylesheet" href="{{ site.staticurl }}/css/modules.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/layout_block.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/modules.css"/>
+<link rel="stylesheet" href="{{ site.staticurl }}/css/state.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/base.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash.css"/>
 <link rel="stylesheet" href="{{ site.staticurl }}/css/js-splash-highlight.css"/>
