--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -67,17 +67,19 @@ redirect_from: /javascript-graphing-library/
 
 		<div class="js-splash--navigation-section-title">Reference</div>
 		<div class="js-splash--navigation-item-container">
-			<a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Plot Schema</a>
+			<a href="https://plot.ly/javascript/reference" class="js-splash--navigation-item">Chart Attributes</a>
 			<a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="js-splash--navigation-item">Function Reference</a>
 		</div>
 
 		<div class="js-splash--navigation-section-title">Examples</div>
 		<div class="js-splash--navigation-item-container">
-			<a href="#basic-charts" class="js-splash--navigation-item">2D</a>
+			<a href="#basic-charts" class="js-splash--navigation-item">Basic</a>
+      <a href="#statistical-charts" class="js-splash--navigation-item">Statistical</a>
+      <a href="#scientific-charts" class="js-splash--navigation-item">Scientific</a>
       <a href="#3d-charts" class="js-splash--navigation-item">3D</a>
 			<a href="#maps" class="js-splash--navigation-item">Maps</a>
-			<a href="#chart-events" class="js-splash--navigation-item">Events</a>
-			<a href="#layout-options" class="js-splash--navigation-item">Layout</a>
+			<a href="#chart-events" class="js-splash--navigation-item">Events and Controls</a>
+			<a href="#layout-options" class="js-splash--navigation-item">Layout Options</a>
 		</div>
 
     <!--
@@ -128,7 +130,6 @@ $(function() {
   <!-- menu for small screens - is shown through a media query at some screenwidth -->
 
   <div class="js-splash--navigation-inline row" style="width: 100%">
-    <div style="width: 33%; float: left;">
       <div class="js-splash--navigation-section-title">Quick Start</div>
       <div class="js-splash--navigation-item-container">
         <a href="https://plot.ly/javascript/getting-started" class="js-splash--navigation-item">Getting Started</a>
