meta descriptions and names for reference pages

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -3,6 +3,9 @@ permalink: /javascript/reference
 layout: langindex
 page_type: reference
 language: plotly_js
+name: plotly.js chart attribute reference
+title: plotly.js chart attribute reference
+description: The extensive reference of plotly chart attributes for plotly.js.
 ---
 <h2><code>plotly.js</code> figure reference</h2>
 
