--- a/_posts/2015-09-06-r-reference.html
+++ b/_posts/2015-09-06-r-reference.html
@@ -3,6 +3,9 @@ permalink: /r/reference
 layout: langindex
 page_type: reference
 language: r
+name: plotly R chart attribute reference
+title: plotly R chart attribute reference
+description: The extensive reference of plotly chart attributes for plotly's R library.
 ---
 <h2>R figure reference</h2>
 
