--- a/_posts/2015-09-09-matlab-reference.html
+++ b/_posts/2015-09-09-matlab-reference.html
@@ -3,6 +3,9 @@ permalink: /matlab/reference
 layout: langindex
 page_type: reference
 language: matlab
+name: plotly chart attribute reference
+title: plotly chart attribute reference
+description: The extensive reference of plotly chart attributes for plotly's MATLAB library.
 ---
 <h2><code>matlab</code> figure reference</h2>
 
