--- a/_posts/2015-09-06-python-reference.html
+++ b/_posts/2015-09-06-python-reference.html
@@ -3,6 +3,9 @@ permalink: /python/reference
 layout: langindex
 page_type: reference
 language: python
+name: plotly chart attribute reference
+title: plotly chart attribute reference
+description: The extensive reference of plotly chart attributes for plotly's python library.
 ---
 <h2><code>python</code> figure reference</h2>
 
